--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
 
   <body>
-    <h1>Yo! Yo!</h1>
+    <h3>Yo! Yo!</h3>
+    <ul>
+      <li>Saya</li>
+      <li>Aku</li>
+    </ul>
   </body>
 </html>
